--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation project(path: ':module_home')
-    implementation 'com.github.hufeiyang:Common:1.0.2'
-//    implementation 'com.alibaba:arouter-compiler:1.2.1'
+    implementation 'com.github.SunshineOMT:componentCommon:1.0.1'
+
 }
